testsuite/tests/parsing-toplevel/toplevel_min.ml.reference

#             Ptop_def
  []
Ptop_def
  []
Ptop_def
  []
Characters 82-83:
  #print_depth 20
  ^
Error: Syntax error
#       
Characters 13-14:
  #show_type t
  ^
Error: Syntax error
# 
