testsuite/tests/parsing-toplevel/toplevel_min.ml
(* This file tests the minimum amount of SEMISEMI so that #use works. *)

#cd "."
#print_depth 20

let x = 3
type t = int ;;

#show_val x
#show_type t
